--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Proyectos Front End</h1>
     <ol>
-        <li><a href="./Cowboy Bebop/index.html">Cowboy Bebop 3D</a></li>
+        <li><a href="./Cowboy Bebop/cowboy.html">Cowboy Bebop 3D</a></li>
     </ol>
 </body>
 </html>
