--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Proyectos Front End</h1>
     <ol>
         <li><a href="./CowboyBebop/cowboy.html">Cowboy Bebop 3D</a></li>
+        <li><a href="./Pagani Huayra/pagani.html">Pagani Huayra 3D</a></li>
     </ol>
 </body>
 </html>
